<resources>
    <string name="app_name">Task_Master</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_now">Register Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_email_or_password">Wrong Email or Password</string>
    <string name="pick_data">Pick Data</string>
    <string name="create_task">Create Task</string>
    <string name="set_priority">Set Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="create">Create</string>
    <string name="input_field_cannot_be_empty">Input field cannot be empty</string>
    <string name="please_select_a_priority">Please select a priority</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">log out</string>
    <string name="task_created_successfully">Task Created Successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed">Completed</string>
    <string name="task_marked_as_completed">Task Marked as Completed</string>
    <string name="edit_tasks">Edit Tasks</string>
    <string name="view_tasks">View Tasks</string>
    <string name="create_tasks">Create Tasks</string>
    <string name="no_task_created_yet">No task created yet</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields</string>
    <string name="task_edit_successfully">Task edit successfully</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
</resources>