<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTasks">


    <TextView
        android:id="@+id/tvCreateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/create_task"
        android:layout_marginTop="10dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:id="@+id/etTitle"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:id="@+id/etDescription"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_data"
        android:id="@+id/btnPickDate"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/set_priority"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"


        />

    <View
        android:layout_width="103dp"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"

        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:id="@+id/rgPriority"
        >

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"
        android:id="@+id/rbLow"
        android:textSize="15sp"
        android:textStyle="bold"

        />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:id="@+id/rbMedium"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:id="@+id/rbHigh"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Additional Notes"
            android:id="@+id/etAddNotes"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />


</LinearLayout>