<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home"
    >

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/log_out" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        >
        <ImageView
            android:id="@+id/ivCreateTask"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_create_tasks" />

        <TextView
            android:id="@+id/tvCreateTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/create_tasks" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ivViewTask"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_view_tasks" />

        <TextView
            android:id="@+id/tvViewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/view_tasks" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ivEditTask"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_edit_tasks"
            />

        <TextView
            android:id="@+id/tvEditTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/edit_tasks" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ivDeleteTask"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_delete_tasks" />

        <TextView
            android:id="@+id/tvDeleteTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="Delete Tasks" />

    </LinearLayout>



</LinearLayout>